--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-onboarding",
+  "name": "onboarding",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "next": "16.0.3",
-    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
