--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@pdf-lib/fontkit": "^1.1.1",
+    "framer-motion": "^12.28.1",
     "next": "^16.0.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
