--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@supabase/supabase-js": "^2.91.0",
     "framer-motion": "^12.28.1",
     "next": "^16.0.10",
     "pdf-lib": "^1.17.1",
