--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@supabase/supabase-js": "^2.91.0",
     "framer-motion": "^12.28.1",
+    "isomorphic-dompurify": "^2.36.0",
+    "jose": "^6.1.3",
     "next": "^16.0.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
