--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@pdf-lib/fontkit": "^1.1.1",
     "@supabase/supabase-js": "^2.91.0",
     "framer-motion": "^12.28.1",
-    "isomorphic-dompurify": "^2.36.0",
     "jose": "^6.1.3",
     "next": "^16.0.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sanitize-html": "^2.17.1",
     "server-only": "^0.0.1",
     "uuid": "^13.0.0",
     "zod": "^4.3.6"
@@ -28,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.16.0",
     "eslint": "^9",
     "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
